--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,14 @@
+[build.environment]
+NODE_VERSION = "16"
+
 [build]
 publish = "dist"
 command = "pnpm run build"
 
-[build.environment]
-NODE_VERSION = "16"
+[[redirects]]
+from = "/*"
+to = "/index.html"
+status = 200
 
 [[redirects]]
 from = "/*"
