--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "composite": true,
     "module": "ESNext",
-    "types": ["node"]
+    "types": [
+      "node"
+    ]
   },
   "extends": "@tsconfig/node18/tsconfig.json",
   "include": [
