--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "card",
   "version": "0.0.0",
   "private": true,
+  "packageManager": "pnpm@8.6.0",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check build-only",
