--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "unplugin-auto-import": "^0.16.4",
     "unplugin-vue-components": "^0.25.0",
     "unplugin-vue-macros": "^2.2.1",
+    "unplugin-vue-router": "^0.6.4",
     "vite": "^4.3.9",
-    "vite-plugin-pages": "^0.30.1",
     "vue-tsc": "^1.6.5"
   }
 }
